connected all the pages to homepage

--- a/buyer_order_tracking.html
+++ b/buyer_order_tracking.html
@@ -194,22 +194,11 @@
 </div>
 <!-- Bottom Navigation Bar -->
 <nav class="fixed bottom-0 left-0 right-0 flex h-16 items-center justify-around border-t border-gray-200 bg-white dark:bg-gray-800 dark:border-gray-700">
-<a class="flex flex-col items-center justify-center gap-1 text-primary" href="#">
+<a class="flex flex-col items-center justify-center gap-1 text-primary" href="home.html">
 <span class="material-symbols-outlined">dashboard</span>
 <p class="text-xs font-bold">Dashboard</p>
 </a>
-<a class="flex flex-col items-center justify-center gap-1 text-gray-500 dark:text-gray-400" href="#">
-<span class="material-symbols-outlined">receipt_long</span>
-<p class="text-xs">Orders</p>
-</a>
-<a class="flex flex-col items-center justify-center gap-1 text-gray-500 dark:text-gray-400" href="#">
-<span class="material-symbols-outlined">chat_bubble</span>
-<p class="text-xs">Messages</p>
-</a>
-<a class="flex flex-col items-center justify-center gap-1 text-gray-500 dark:text-gray-400" href="#">
-<span class="material-symbols-outlined">person</span>
-<p class="text-xs">Profile</p>
-</a>
+
 </nav>
 </div>
 </body></html>
