--- a/home.html
+++ b/home.html
@@ -97,9 +97,11 @@
 <p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-normal leading-normal">High demand and suitable for your soil type.</p>
 <p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-bold leading-normal">Projected ROI: <span class="text-primary">25%</span></p>
 </div>
+<a href="crop_recommend.html">
 <button class="flex h-10 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-primary px-4 text-sm font-bold leading-normal text-white">
-<span class="truncate">View Details</span>
+<span class="truncate">Recommend Crop</span>
 </button>
+</a>
 </div>
 </div>
 </div>
@@ -127,57 +129,27 @@
 <p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-medium leading-normal">Recent Orders</p>
 <p class="text-text-primary-light dark:text-text-primary-dark text-2xl font-bold leading-tight">3</p>
 </div>
+<a href = "product_listing.html">
 <button class="flex h-12 w-12 cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary text-white">
 <span class="material-symbols-outlined text-3xl">add</span>
 </button>
-</div>
-</div>
-</div>
-<!-- Quick Links -->
-<h3 class="text-text-primary-light dark:text-text-primary-dark px-4 pb-2 pt-6 text-xl font-bold leading-tight tracking-[-0.015em]">Quick Actions</h3>
-<div class="grid grid-cols-2 gap-4 p-4">
-<a class="flex flex-col items-center justify-center gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 text-center shadow-sm" href="#">
-<div class="flex size-12 items-center justify-center rounded-full bg-primary/20 text-primary">
-<span class="material-symbols-outlined">trending_up</span>
-</div>
-<p class="text-text-primary-light dark:text-text-primary-dark text-sm font-semibold">Market Prices</p>
 </a>
-<a class="flex flex-col items-center justify-center gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 text-center shadow-sm" href="#">
-<div class="flex size-12 items-center justify-center rounded-full bg-accent-blue/20 text-accent-blue">
-<span class="material-symbols-outlined">support_agent</span>
 </div>
-<p class="text-text-primary-light dark:text-text-primary-dark text-sm font-semibold">Crop Advisory</p>
-</a>
-<a class="flex flex-col items-center justify-center gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 text-center shadow-sm" href="#">
-<div class="flex size-12 items-center justify-center rounded-full bg-accent-yellow/20 text-accent-yellow">
-<span class="material-symbols-outlined">forum</span>
 </div>
-<p class="text-text-primary-light dark:text-text-primary-dark text-sm font-semibold">Community</p>
-</a>
-<a class="flex flex-col items-center justify-center gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 text-center shadow-sm" href="#">
-<div class="flex size-12 items-center justify-center rounded-full bg-red-500/20 text-red-500">
-<span class="material-symbols-outlined">bug_report</span>
-</div>
-<p class="text-text-primary-light dark:text-text-primary-dark text-sm font-semibold">Pest Alert</p>
-</a>
 </div>
 </main>
 <!-- Bottom Navigation Bar -->
 <nav class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80">
-<div class="mx-auto grid h-16 max-w-lg grid-cols-4 px-4">
-<a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="#">
+<div class="mx-auto grid h-16 max-w-lg grid-cols-3 px-4">
+<a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="home.html">
 <span class="material-symbols-outlined">home</span>
 <span class="text-xs font-bold">Dashboard</span>
 </a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="#">
+<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="Farmer_order_manag.html">
 <span class="material-symbols-outlined">grass</span>
 <span class="text-xs font-medium">My Crops</span>
 </a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="#">
-<span class="material-symbols-outlined">storefront</span>
-<span class="text-xs font-medium">Marketplace</span>
-</a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="#">
+<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="buyer_order_tracking.html">
 <span class="material-symbols-outlined">person</span>
 <span class="text-xs font-medium">Profile</span>
 </a>
