integrated marketplace page and made the connections

--- a/crop_recommend.html
+++ b/crop_recommend.html
@@ -55,7 +55,7 @@
 <div class="relative flex min-h-screen w-full flex-col group/design-root overflow-x-hidden">
 <!-- Top App Bar -->
 <header class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-10 border-b border-border-light dark:border-border-dark">
-<button class="text-text-primary dark:text-gray-200 flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">
+<button onclick = "history.back()" class="text-text-primary dark:text-gray-200 flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">
 <span class="material-symbols-outlined">arrow_back</span>
 </button>
 <h1 class="text-text-primary dark:text-gray-100 text-lg font-bold leading-tight tracking-tight flex-1 text-center">Crop &amp; ROI Advisor</h1>
