--- a/home.html
+++ b/home.html
@@ -58,18 +58,9 @@
 <!-- Main Content -->
 <main class="flex-1 pb-24">
 <!-- Header -->
-<div class="flex flex-col gap-2 bg-background-light dark:bg-background-dark p-4 pb-2 sticky top-0 z-10">
-<div class="flex h-12 items-center justify-between">
-<div class="flex size-12 shrink-0 items-center">
-<div class="aspect-square size-10 rounded-full bg-cover bg-center bg-no-repeat" data-alt="User profile picture of Ram" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCOxAiB0DXSC1-A6vm2mCMjoyWfDwOJHABs26QmrJzaiCCzu5rGNZOSYG6Th0st0tcnVHNTHuXAEXtER5XOnRD3_osyYe5o0TfGfRgUL5L-UIVrkfp3qhQtwbV_KQqBYnWLh_a3t5XecHIWzGuISqjrReb68rBTYdPHE_7gTgHY37fXnfxWYib5Y4VJYhErzotiHOl3-FEES-Vt-2Tm_a-jEyBRBXw1Bb6yYnjnEDW8Lhpl5eCKcwSpvxUdq0-QzNB_1bfxIS2zORkL");'></div>
-</div>
-<div class="flex w-12 items-center justify-end">
-<button class="flex h-12 cursor-pointer items-center justify-center overflow-hidden rounded-lg bg-transparent text-text-primary-light dark:text-text-primary-dark min-w-0 p-0">
-<span class="material-symbols-outlined text-2xl">notifications</span>
-</button>
-</div>
-</div>
-<p class="text-text-primary-light dark:text-text-primary-dark text-3xl font-bold leading-tight tracking-tight">Hello, Ram</p>
+
+<div>
+  <h1 class="text-text-primary-light dark:text-text-primary-dark text-xl font-bold leading-tight tracking-[-0.015em]">AGRISETU</h1>
 </div>
 <!-- Weather Widget -->
 <div class="p-4">
@@ -140,7 +131,7 @@
 </main>
 <!-- Bottom Navigation Bar -->
 <nav class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80">
-<div class="mx-auto grid h-16 max-w-lg grid-cols-3 px-4">
+<div class="mx-auto grid h-16 max-w-lg grid-cols-4 px-4">
 <a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="home.html">
 <span class="material-symbols-outlined">home</span>
 <span class="text-xs font-bold">Dashboard</span>
@@ -148,6 +139,10 @@
 <a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="Farmer_order_manag.html">
 <span class="material-symbols-outlined">grass</span>
 <span class="text-xs font-medium">My Crops</span>
+</a>
+<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="marketplace.html">
+<span class="material-symbols-outlined">grass</span>
+<span class="text-xs font-medium">Marketplace</span>
 </a>
 <a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="buyer_order_tracking.html">
 <span class="material-symbols-outlined">person</span>
