--- a/Farmer_order_manag.html
+++ b/Farmer_order_manag.html
@@ -39,9 +39,9 @@
 <div class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root overflow-x-hidden">
 <!-- Top App Bar -->
 <div class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-10">
-<div class="text-charcoal dark:text-gray-200 flex size-12 shrink-0 items-center justify-center">
-<span class="material-symbols-outlined text-3xl">menu</span>
-</div>
+<button onclick="history.back()" class="text-charcoal dark:text-gray-200 flex size-12 shrink-0 items-center justify-center cursor-pointer">
+<span class="material-symbols-outlined text-3xl">arrow_back</span>
+</button>
 <h2 class="text-charcoal dark:text-gray-100 text-xl font-bold leading-tight tracking-[-0.015em] flex-1 text-center">My Orders</h2>
 <div class="text-charcoal dark:text-gray-200 flex size-12 shrink-0 items-center justify-center">
 <span class="material-symbols-outlined text-3xl">notifications</span>
