--- a/buyer_order_tracking.html
+++ b/buyer_order_tracking.html
@@ -50,12 +50,10 @@
 <div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden pb-24">
 <!-- Top App Bar -->
 <header class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-10 border-b border-gray-200 dark:border-gray-800">
-<h1 class="text-text-light dark:text-text-dark text-xl font-bold leading-tight tracking-[-0.015em] flex-1">Buyer Dashboard</h1>
-<div class="flex w-12 items-center justify-end">
-<button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-gray-200 dark:bg-gray-700 text-text-light dark:text-text-dark gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
-<span class="material-symbols-outlined text-text-light dark:text-text-dark">person</span>
+<button onclick="history.back()" class="text-text-light dark:text-text-dark flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">
+<span class="material-symbols-outlined">arrow_back</span>
 </button>
-</div>
+<h1 class="text-text-light dark:text-text-dark text-xl font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Buyer Dashboard</h1>
 </header>
 <!-- Stats -->
 <section class="flex flex-wrap gap-4 p-4">
@@ -193,12 +191,5 @@
 </div>
 </div>
 <!-- Bottom Navigation Bar -->
-<nav class="fixed bottom-0 left-0 right-0 flex h-16 items-center justify-around border-t border-gray-200 bg-white dark:bg-gray-800 dark:border-gray-700">
-<a class="flex flex-col items-center justify-center gap-1 text-primary" href="home.html">
-<span class="material-symbols-outlined">dashboard</span>
-<p class="text-xs font-bold">Dashboard</p>
-</a>
-
-</nav>
 </div>
 </body></html>
