seperated the crop recommendation from main website

--- a/crop_recommend.html
+++ b/crop_recommend.html
@@ -173,10 +173,14 @@
                 </p>
 </div>
 </main>
+
 <!-- Bottom CTA Button -->
-<footer class="fixed bottom-0 left-0 right-0 p-4 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm border-t border-border-light dark:border-border-dark">
-<button class="w-full bg-primary text-white text-lg font-bold py-4 px-4 rounded-xl shadow-lg hover:bg-primary/90 focus:outline-none focus:ring-4 focus:ring-primary/50 transition-all duration-300">
+<footer class="fixed bottom-0 left-0 right-0 p-4 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm border-t border-border-light dark:border-border-dark flex gap-4">
+<button class="flex-1 bg-primary text-white text-lg font-bold py-4 px-4 rounded-xl shadow-lg hover:bg-primary/90 focus:outline-none focus:ring-4 focus:ring-primary/50 transition-all duration-300">
                 Calculate My Recommendation
+            </button>
+<button onclick= "window.location.href = 'product_listing.html' " class="flex-1 bg-primary text-white text-lg font-bold py-4 px-4 rounded-xl shadow-lg hover:bg-primary/90 focus:outline-none focus:ring-4 focus:ring-primary/50 transition-all duration-300">
+                Add  Product to Marketplace
             </button>
 </footer>
 </div>
