--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
 <h3 class="text-text-primary-light dark:text-text-primary-dark px-4 pb-2 pt-4 text-xl font-bold leading-tight tracking-[-0.015em]">Top Recommendation for You</h3>
 <div class="px-4">
 <div class="flex flex-col items-stretch justify-start rounded-lg bg-card-light dark:bg-card-dark shadow-sm overflow-hidden">
-<div class="aspect-video w-full bg-cover bg-center bg-no-repeat" data-alt="A lush green field of soybean crops under a clear blue sky" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCfliFER-BzjVQ5PMZ80loK4Lf8u_KTGMFNjI52jq0uUoQnF4Eye36ifdzzirUkmBn2AknQTR4QhBr8sSGKtd8RLJe9vPVMXtcBhWO6T98OVAjn5Y_9M7JsCyMKgjPhRGAAImMMGOR-f43Q-5wxmK2exH596gxzNWZMCI_eFh1iZyfxPVok4h66FiR1wjzXRrry3h1djDW0hblcfKzI0M5L48HcGTx5TLAGXp0Ir_glaDbK6pvFRVOvLjpNrUxxuFbadVZnEhLngcUC");'></div>
+<div class="h-96 w-full bg-cover bg-center bg-no-repeat" data-alt="A lush green field of soybean crops under a clear blue sky" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCfliFER-BzjVQ5PMZ80loK4Lf8u_KTGMFNjI52jq0uUoQnF4Eye36ifdzzirUkmBn2AknQTR4QhBr8sSGKtd8RLJe9vPVMXtcBhWO6T98OVAjn5Y_9M7JsCyMKgjPhRGAAImMMGOR-f43Q-5wxmK2exH596gxzNWZMCI_eFh1iZyfxPVok4h66FiR1wjzXRrry3h1djDW0hblcfKzI0M5L48HcGTx5TLAGXp0Ir_glaDbK6pvFRVOvLjpNrUxxuFbadVZnEhLngcUC");'></div>
 <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1 p-4">
 <p class="text-primary text-sm font-semibold leading-normal">Sowing Season: July - August</p>
 <p class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">Soybean Crop</p>
@@ -97,58 +97,22 @@
 </div>
 </div>
 </div>
-<!-- My Farm & Marketplace Summary -->
-<div class="flex flex-wrap gap-4 p-4">
-<div class="flex min-w-[150px] flex-1 flex-col gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 shadow-sm">
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-medium leading-normal">Total Land Area</p>
-<p class="text-text-primary-light dark:text-text-primary-dark text-3xl font-bold leading-tight tracking-tight">15 Acres</p>
-</div>
-<div class="flex min-w-[150px] flex-1 flex-col gap-2 rounded-lg bg-card-light dark:bg-card-dark p-4 shadow-sm">
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-medium leading-normal">Active Plots</p>
-<p class="text-text-primary-light dark:text-text-primary-dark text-3xl font-bold leading-tight tracking-tight">4</p>
-</div>
-</div>
-<div class="px-4">
-<div class="rounded-lg bg-card-light dark:bg-card-dark p-4 shadow-sm">
-<p class="text-text-primary-light dark:text-text-primary-dark text-xl font-bold leading-tight tracking-[-0.015em]">My Marketplace Listings</p>
-<div class="mt-4 flex items-center justify-between gap-4">
-<div class="flex flex-col gap-1">
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-medium leading-normal">Active Listings</p>
-<p class="text-text-primary-light dark:text-text-primary-dark text-2xl font-bold leading-tight">8</p>
-</div>
-<div class="flex flex-col gap-1">
-<p class="text-text-secondary-light dark:text-text-secondary-dark text-base font-medium leading-normal">Recent Orders</p>
-<p class="text-text-primary-light dark:text-text-primary-dark text-2xl font-bold leading-tight">3</p>
-</div>
-<a href = "product_listing.html">
-<button class="flex h-12 w-12 cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary text-white">
-<span class="material-symbols-outlined text-3xl">add</span>
-</button>
-</a>
-</div>
-</div>
-</div>
+
+
 </main>
 <!-- Bottom Navigation Bar -->
 <nav class="fixed bottom-0 left-0 right-0 z-20 border-t border-gray-200/50 bg-card-light/80 backdrop-blur-lg dark:border-gray-700/50 dark:bg-card-dark/80">
-<div class="mx-auto grid h-16 max-w-lg grid-cols-4 px-4">
+<div class="mx-auto grid h-16 max-w-lg grid-cols-2 px-4">
 <a class="group inline-flex flex-col items-center justify-center text-center text-primary" href="home.html">
 <span class="material-symbols-outlined">home</span>
 <span class="text-xs font-bold">Dashboard</span>
 </a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="Farmer_order_manag.html">
-<span class="material-symbols-outlined">grass</span>
-<span class="text-xs font-medium">My Crops</span>
-</a>
+
 <a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="marketplace.html">
 <span class="material-symbols-outlined">grass</span>
 <span class="text-xs font-medium">Marketplace</span>
 </a>
-<a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="buyer_order_tracking.html">
-<span class="material-symbols-outlined">person</span>
-<span class="text-xs font-medium">Profile</span>
-</a>
-</div>
+
 </nav>
 </div>
 </body></html>
