--- a/product_listing.html
+++ b/product_listing.html
@@ -51,7 +51,9 @@
 <!-- Top App Bar -->
 <header class="sticky top-0 z-10 flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between border-b border-gray-200 dark:border-gray-700">
 <div class="flex size-12 shrink-0 items-center justify-start">
+    <button onclick="history.back()">
 <span class="material-symbols-outlined text-gray-800 dark:text-gray-200">arrow_back</span>
+</button>
 </div>
 <h1 class="text-lg font-bold leading-tight tracking-tight text-gray-900 dark:text-white flex-1 text-center">Add a New Product</h1>
 <div class="flex w-12 items-center justify-end">
@@ -59,22 +61,6 @@
 </div>
 </header>
 <main class="flex-1 pb-24">
-<!-- Section 1: Product Photos -->
-<section>
-<h2 class="text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4 text-gray-900 dark:text-white">Product Photos</h2>
-<div class="p-4">
-<div class="flex flex-col items-center gap-6 rounded-lg border-2 border-dashed border-gray-300 dark:border-gray-600 px-6 py-14">
-<div class="flex max-w-[480px] flex-col items-center gap-2">
-<span class="material-symbols-outlined text-4xl text-gray-500 dark:text-gray-400">add_a_photo</span>
-<p class="text-lg font-bold leading-tight tracking-[-0.015em] text-center text-gray-900 dark:text-white">Upload Photos</p>
-<p class="text-sm font-normal leading-normal text-center text-gray-600 dark:text-gray-400">Add up to 5 photos of your product</p>
-</div>
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary/20 text-primary-green dark:bg-primary/30 dark:text-green-300 text-sm font-bold leading-normal tracking-[0.015em]">
-<span class="truncate">Add Images</span>
-</button>
-</div>
-</div>
-</section>
 <!-- Section 2: Basic Details -->
 <section>
 <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4 text-gray-900 dark:text-white">Basic Details</h2>
