updated place holders

--- a/marketplace.html
+++ b/marketplace.html
@@ -99,7 +99,7 @@
 <div class="text-muted-light dark:text-muted-dark flex items-center justify-center pl-4">
 <span class="material-symbols-outlined text-2xl">search</span>
 </div>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden text-text-light dark:text-text-dark focus:outline-0 focus:ring-0 border-none bg-transparent h-full placeholder:text-muted-light dark:placeholder:text-muted-dark px-2 text-base font-normal leading-normal" placeholder="Search by crop, farmer, or location" value=""/>
+<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden text-text-light dark:text-text-dark focus:outline-0 focus:ring-0 border-none bg-transparent h-full placeholder:text-muted-light dark:placeholder:text-muted-dark px-2 text-base font-normal leading-normal" placeholder="Search by crop" value=""/>
 </div>
 </label>
 </div>
