--- a/marketplace.html
+++ b/marketplace.html
@@ -54,27 +54,26 @@
 <div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
 <!-- Sidebar -->
 <div id="sidebar" class="fixed left-0 top-0 h-screen w-64 bg-surface-light dark:bg-surface-dark shadow-lg transform -translate-x-full transition-transform duration-300 z-30 flex flex-col">
-<div class="flex items-center justify-between p-4 border-b border-border-light dark:border-border-dark">
-<h3 class="text-lg font-bold text-text-light dark:text-text-dark">Menu</h3>
-<button onclick="toggleSidebar()" class="text-text-light dark:text-text-dark">
-<span class="material-symbols-outlined">close</span>
-</button>
-</div>
-<nav class="flex-1 p-4 space-y-2">
-<a href="home.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-<span class="material-symbols-outlined">home</span>
-<span>Dashboard</span>
-</a>
-<a href="Farmer_order_manag.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-<span class="material-symbols-outlined">grass</span>
-<span>My Crops</span>
-</a>
-<a href="product_listing.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
-<span class="material-symbols-outlined">shopping_bag</span>
-<span>Add product</span>
-</a>
-<
-</nav>
+  <div class="flex items-center justify-between p-4 border-b border-border-light dark:border-border-dark">
+  <h3 class="text-lg font-bold text-text-light dark:text-text-dark">Menu</h3>
+  <button onclick="toggleSidebar()" class="text-text-light dark:text-text-dark">
+  <span class="material-symbols-outlined">close</span>
+  </button>
+  </div>
+    <nav class="flex-1 p-3 space-y-2">
+    <a href="home.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
+    <span class="material-symbols-outlined">home</span>
+    <span>Dashboard</span>
+    </a>
+    <a href="Farmer_order_manag.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
+    <span class="material-symbols-outlined">grass</span>
+    <span>My Crops</span>
+    </a>
+    <a href="product_listing.html" class="flex items-center gap-3 px-4 py-3 rounded-lg text-text-light dark:text-text-dark hover:bg-primary/20 transition-colors">
+    <span class="material-symbols-outlined">shopping_bag</span>
+    <span>Add product</span>
+    </a>
+    </nav>
 </div>
 <!-- Sidebar Overlay -->
 <div id="sidebarOverlay" class="fixed inset-0 bg-black/50 hidden z-20" onclick="toggleSidebar()"></div>
@@ -181,7 +180,7 @@
 </a>
 <a class="group inline-flex flex-col items-center justify-center text-center text-text-secondary-light hover:text-primary dark:text-text-secondary-dark dark:hover:text-primary" href="buyer_order_tracking.html">
 <span class="material-symbols-outlined">grass</span>
-<span class="text-xs font-medium">My Orders</span>
+<span class="text-xs font-medium">Purchased Orders</span>
 </a>
 
 </div>
