--- a/marketplace.html
+++ b/marketplace.html
@@ -72,10 +72,12 @@
 </button>
 <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center text-text-light dark:text-text-dark">Marketplace</h2>
 <div class="flex w-12 items-center justify-end">
+<a href="checkout.html">
 <button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-transparent text-text-light dark:text-text-dark gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0 relative">
 <span class="material-symbols-outlined text-2xl">shopping_cart</span>
 <div class="absolute top-1 right-1 flex h-4 w-4 items-center justify-center rounded-full bg-primary text-xs font-bold text-white">2</div>
 </button>
+</a>
 </div>
 </div>
 <!-- SearchBar -->
