added custom products into the market place

--- a/marketplace.html
+++ b/marketplace.html
@@ -16,7 +16,7 @@
         theme: {
           extend: {
             colors: {
-              "primary": "#53d22d",
+              "primary": "#27AE60",
               "background-light": "#f6f8f6",
               "background-dark": "#152012",
               "text-light": "#152012",
@@ -107,57 +107,9 @@
 </button>
 </div>
 </div>
-<main class="flex-grow">
+<main class="flex-grow pb-24">
 <!-- ImageGrid -->
-<div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-4 p-4">
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="A vibrant pile of fresh, red organic tomatoes" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCNy0_3mLgQu9AGNExh_JtaQIBmjTomO_nE9EPxqhSe-MbttsKmZnvNfSO-_CvUHPZ-ES9mv8fTijCYi8gRJhE_x-FHIgOYrm48LubmRLYTqMtvhDtSickHr9dBtznPlKlvfQSnSxqvn_m9wOj3zXgZ1l2BoJE94a2QdH9j55CqN1yFTuzAOJ1_YB8tZclad_vig30Ss5Tt1CFeJmIstkbYmiZqmka96TZDVLIuRI0oN5JcvhC59ImfvlFyG0SsYFt_glVraI28wbNA");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Organic Tomatoes</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$1.50/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 50kg</p>
-</div>
-</div>
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="A bunch of bright orange fresh carrots with green tops" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBHC70KOiEzVqF_FBH9-yqVdgktXht0uUpHTO_GHeTGoT4yaamS4LUrQKnhFaP7giECArwOANDlgnW-NPEVn4BBiBTHeIUxpI7HyzEoCzxvaUj1Rk6gQCKCETns35vUarQw096LYc4x1c6JZPwVPWMXJYECnp95bSCoOI-JIrvRQrZ082Jk2ykJIqxVgxcsd3dx9TuwjgPM8WTSwblu3JLI6WwLCGa5OkKrH_fLldV3FG8jonY5x9PLKUzvBmILOcpEcimE_oNnuAy9");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Fresh Carrots</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$0.80/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 100kg</p>
-</div>
-</div>
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="Close-up of golden corn cobs with yellow kernels" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB4ukvK6JVSxv97AWfz01lspEfDd1H5gdlmPtW2OfJ9JGAd7oLVAw2l-VfjDrKm78H2aTC8DXiIAdHwxeXNuut1g3uPqE0mbMDrGNVrXQi1SJHDpGHqajkPg1vh2ib_V_sxvfh4znB5wIRFF8Eg6_KnF7hqD8Bz4LEFOg4ZGucr6uIggEYoSrohS-uTz0MkkIm5NfUVO1REwrEIHiWADCNaoZgt02zJlFwXfmgnT0eazkQ_umZIiJd_bBWms4a5S2DfmLDQZ4b2BI-1");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Golden Corn</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$1.20/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 200kg</p>
-</div>
-</div>
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="Shiny green bell peppers on display" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuACsmPtGCOH26miuh7tOb2kCeaexshridE4xsPB03dGw3C8XalQYOxedHCdq_3Gq11aT5uVRSvCcirsuCEmpTI0aO7vC3aJz3wwdmY3bmFPgyyLE1WIGmsR3Eu9hmjiDK_A8PxC0EmSjkWbM3Y5TptkKDqDi7xJd_C-_z0HuJ3Wmg12jh5IwJ9CcWBc-ryA9fHgxhAEryO-GONxzsalQwUPVNEHYHFR0GyQO8qb40fXzQLUBAKJ7lQIMSZQO-DH2jld6RnnECZSXfqc");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Green Bell Peppers</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$2.00/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 40kg</p>
-</div>
-</div>
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="A basket full of fresh, organic potatoes" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAo81CFfues_x96aU_5Tw6pgX6Ojq8amtecRjkhkpfTBml4IrwOzd4bf_ETfudETJiyDbevjjHwvw-_6ce9T0OSTjUMhjw_OGYDGhKIc3QT0WpeadtDn_Z_EOCk7KPe2leUaq8t9dFTjQjrHnE9Ae3uggsmI9NrJbEeUvHuCYz5HWAS2UyJNaLyAoWZWZ3kt6G4ygyTx7mhEkq-gdarlwg8-HsDAn88wNFKlrvR3e0PruSHTEwv3zHY0uhyIwoPi0b2uBQ1jjNSVsJv");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Himalayan Potatoes</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$0.90/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 150kg</p>
-</div>
-</div>
-<div class="flex flex-col gap-3 rounded-xl bg-surface-light dark:bg-surface-dark overflow-hidden border border-border-light dark:border-border-dark cursor-pointer transition-shadow hover:shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-square bg-cover" data-alt="Close-up of crisp, red apples on a tree" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCPegpDAW_eiYiXVe00aC_sgYpY6rnSQfoJDTmMT0ImNf1F488j2YWnwEbJe6efv3t2piKOQBHHiDvlRBeRDNYU9nkUvYaseQRv_H-AoWV4_plrkIspLWSLIQZfAgZjMTnq-vqxShQ-PDTbJHhbZo_UVpmIF2dMEc-wQ04XLQU9F8Pg2qp4t2JIgQ9A--8PM8IDizLK23swXc6p3fJn3j8o9j3qY3-a1Zzoky4IqhMn2eti6KZjsotuAMSnd-CgxlZpqhWEJi0F_co2");'></div>
-<div class="p-3 pt-0">
-<p class="text-base font-semibold leading-normal text-text-light dark:text-text-dark">Royal Gala Apples</p>
-<p class="text-base font-bold leading-normal text-primary mt-1">$2.50/kg</p>
-<p class="text-xs font-normal leading-normal text-muted-light dark:text-muted-dark">Min. 80kg</p>
-</div>
-</div>
+<div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-4 p-4 js-products-grid">
 </div>
 </main>
  <!-- Bottom Navigation Bar -->
@@ -183,4 +135,6 @@ function toggleSidebar() {
   overlay.classList.toggle('hidden');
 }
 </script>
+
+<script type = 'module' src = 'scripts/marketplace/marketplace.js'></script>
 </body></html>
