--- a/home.html
+++ b/home.html
@@ -47,8 +47,9 @@
 <main class="flex-1 pb-24">
 <!-- Header -->
 
-<div>
-  <h1 class="text-text-primary-light dark:text-text-primary-dark text-xl font-bold leading-tight tracking-[-0.015em]">AGRISETU</h1>
+<div class="flex items-center gap-3 px-4 py-1">
+  <img src="images/logo.png" alt="AgriSetu logo" class="h-24 w-24 md:h-32 md:w-32 object-contain"/>
+  <h1 class="text-text-primary-light dark:text-text-primary-dark text-4xl md:text-6xl font-extrabold leading-tight tracking-[-0.015em]">AGRISETU</h1>
 </div>
 <!-- Weather Widget -->
 <div class="p-4">
@@ -102,6 +103,8 @@
 
 </nav>
 </div>
+
+<!-- weather card -->
 <script type="module" src="scripts/home/weather_card.js"></script>
 <script type="module">
 import { weatherCard } from './scripts/home/weather_card.js';
